# boolvec

./: Cargo.toml
src/: bool_ref.rs  lib.rs  mask.rs
